--- a/Verk7/verk7.html
+++ b/Verk7/verk7.html
@@ -19,6 +19,7 @@
             <p>By January 2020, more than five million copies had been sold. A sequel, Subnautica: Below Zero, was released May 14, 2021.</p>
 
             <img class="poster1_2" src="poster.jpg">
+            <!--<img class="búbblur" src="air_bubbles.png">-->
         </div>
     </div>
     <nav class="demographics">
@@ -30,7 +31,7 @@
             <img class="charlie1_2" src="Charlie Cleveland.jpg">
             <p class="undirmynd">Charlie Cleveland - Game Director</p>
         </div>
-        <div>
+        <div class="thrountexti">
             <p>Subnautica was announced by Unknown Worlds Entertainment on December 17, 2013, with Charlie Cleveland as the director and lead gameplay programmer, and Hugh Jeremy as the producer. The music is composed by Simon Chylinski.</p>
 
             <p>Cleveland was heavily inspired by Minecraft, which he noted "transformed the game industry" and "threw away all traditional challenge oriented and progression oriented games". The release of Minecraft overlapped with Unknown Worlds releasing Natural Selection 2. Feeling exhausted, the team wanted to try something new and decided to make such a game. Other influences included scuba diving, the filmography of James Cameron, and "just the feeling of exploring the deep, dark, alternately beautiful and terrible, ocean depths. Feeling like I'm an explorer, almost an astronaut, not knowing what I'll find". Cleveland did not initially view it as a survival game but as an exploration game.</p>
@@ -49,6 +50,5 @@
         </div>
         <img class="poster2_2" src="poster2.jpg">
     </nav>
-    <iframe class="myndband" src="https://www.youtube-nocookie.com/embed/Rz2SNm8VguE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
